[gd_scene load_steps=4 format=3 uid="uid://7ah6m5p2sbsb"]

[ext_resource type="Script" path="res://components/upgrade_choice_overlay/upgrade_choices_overlay.gd" id="1_ibghb"]
[ext_resource type="PackedScene" uid="uid://51hhnxgsnk2k" path="res://components/upgrade_choice_overlay/upgrade_choice_card/upgrade_card.tscn" id="2_vtp3s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ia4oi"]
bg_color = Color(0, 0, 0, 0.87451)

[node name="UpgradeChoicesOverlay" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_ibghb")
upgrade_card_scene = ExtResource("2_vtp3s")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ia4oi")

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 69.0
offset_bottom = 101.0
grow_horizontal = 2
theme_type_variation = &"TitleLabel"
theme_override_font_sizes/font_size = 50
text = "CHOOSE YOUR UPGRADE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeCardsHbox" type="HBoxContainer" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 450)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -195.0
offset_right = 150.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ConfirmChoiceButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -87.0
offset_right = 85.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 0
text = "CONFIRM CHOICE"
